--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-set(SRC app.cc file_info_elf.cc main.cc project.cc sqlite.cc)
+set(SRC app.cc file_info_elf.cc hex.cc main.cc project.cc sqlite.cc)
 
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -Wextra -std=c++0x")
 
